--- a/css/terminal.css
+++ b/css/terminal.css
@@ -138,7 +138,7 @@ select {
   color: var(--foreground);
   border: 1px solid var(--foreground);
   border-radius: var(--radius);
-  padding: 10px;
+  /* padding: 10px; */
   font: inherit;
   appearance: none;
 }
@@ -400,5 +400,127 @@ button {
   padding: 10px;
 }
 .small_button {
+  width: 75px;
   margin-bottom: 10px;
+}
+input[type=range] {
+  -webkit-appearance: none;
+  margin: 18px 0;
+  width: 100%;
+}
+
+input[type=range]:focus {
+  outline: none;
+}
+
+input[type=range]::-webkit-slider-runnable-track {
+  width: 100%;
+  height: 8.4px;
+  cursor: pointer;
+  /* box-shadow: 1px 1px 1px #000000, 0px 0px 1px #0d0d0d; */
+  background: #5dc3ee;
+  /* border-radius: 1.3px; */
+  /* border: 0.2px solid #010101; */
+}
+
+input[type=range]::-webkit-slider-thumb {
+  /* box-shadow: 1px 1px 1px #000000, 0px 0px 1px #0d0d0d;
+  border: 1px solid #000000; */
+  height: 36px;
+  width: 16px;
+  /* border-radius: 3px; */
+  background: #5dc3ee;
+  cursor: pointer;
+  -webkit-appearance: none;
+  margin-top: -14px;
+}
+
+input[type=range]:focus::-webkit-slider-runnable-track {
+  background: #5dc3ee;
+}
+
+input[type=range]::-moz-range-track {
+  width: 100%;
+  height: 8.4px;
+  cursor: pointer;
+  /* box-shadow: 1px 1px 1px #000000, 0px 0px 1px #0d0d0d; */
+  background: #5dc3ee;
+  /* border-radius: 1.3px; */
+  /* border: 0.2px solid #010101; */
+}
+
+input[type=range]::-moz-range-thumb {
+  /* box-shadow: 1px 1px 1px #000000, 0px 0px 1px #0d0d0d;
+  border: 1px solid #000000; */
+  height: 36px;
+  width: 16px;
+  /* border-radius: 3px; */
+  background: #5dc3ee;
+  cursor: pointer;
+}
+
+input[type=range]::-ms-track {
+  width: 100%;
+  height: 8.4px;
+  cursor: pointer;
+  background: transparent;
+  border-color: transparent;
+  border-width: 16px 0;
+  color: transparent;
+}
+
+input[type=range]::-ms-fill-lower {
+  background: #5dc3ee;
+  border: 0.2px solid #010101;
+  /* border-radius: 2.6px; */
+  box-shadow: 1px 1px 1px #000000, 0px 0px 1px #0d0d0d;
+}
+
+input[type=range]::-ms-fill-upper {
+  background: #5dc3ee;
+  /* border: 0.2px solid #010101; */
+  /* border-radius: 2.6px; */
+  /* box-shadow: 1px 1px 1px #000000, 0px 0px 1px #0d0d0d; */
+}
+
+input[type=range]::-ms-thumb {
+  /* box-shadow: 1px 1px 1px #000000, 0px 0px 1px #0d0d0d;
+  border: 1px solid #000000; */
+  height: 36px;
+  width: 16px;
+  /* border-radius: 3px; */
+  background: #5dc3ee;
+  cursor: pointer;
+}
+
+input[type=range]:focus::-ms-fill-lower {
+  background: #5dc3ee;
+}
+
+input[type=range]:focus::-ms-fill-upper {
+  background: #5dc3ee;
+}
+
+.jack_player {
+  border: none;
+}
+
+#headline {
+  display: flex;
+  flex: 1;
+  white-space: nowrap;
+  line-height: 1;
+  letter-spacing: 0.04em;
+  text-transform: uppercase;
+  margin-top: 5px;
+  margin-bottom: 10px;
+}
+
+#headline::after {
+  content: '';
+  background: repeating-linear-gradient(90deg, var(--accent), var(--accent) 2px, transparent 0, transparent 8px);
+  display: block;
+  width: 100%;
+  margin-left: 20px;
+  right: 10px;
 }
